kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/accounts(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: accounts-service
            port:
              number: 8000
      - path: /api/blogs(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blog-service
            port:
              number: 8000
